--- a/20221109_Dial_Jackson_HW4.Rmd
+++ b/20221109_Dial_Jackson_HW4.Rmd
@@ -59,7 +59,7 @@ Optic Disc: The optic disc or optic nerve head is the point of exit for ganglion
 
 ```{r ReadData, warning=FALSE, message=False}
 diabetic_df <- read_csv("Data/diabetic.csv")
-head(diabetic_df)
+head(diabetic_df, 5)
 nrow(diabetic_df)
 ```
 There are 1151 rows in the entire dataset.
@@ -101,12 +101,28 @@ There are 1147 rows left.
 3. Use scale() to standardize the independent variables in this dataset. Structure a new dataframe that has all the standardized independent variables as well as the binary label column. Hint: you can use the as_tibble() function to nicely format the standardized columns into a dataframe.
 
 ```{r}
-
+acc_scale <- acceptable %>% 
+  subset(select = -c(label)) %>% 
+  scale() %>% 
+  data.frame() %>% 
+  cbind(acceptable %>% select(label))
 ```
 
 
 4. For simplicity, we will arbitrarily split our dataset into an 80:20 ratio for the training and testing datasets, respectively. Split your standardized dataset into two separate data frames – i.e. the first 80% of rows for training and the remaining 20% for testing. Name your dataframes appropriately (e.g. df_train and df_test). Then extract four new dataframes called X_train, X_test, which contain only the independent variables, and y_train, y_test, which contain only the labels.
 
+```{r}
+acc_scale$id <- 1:nrow(acc_scale)
+
+train <- acc_scale %>% dplyr::sample_frac(0.80)
+test  <- dplyr::anti_join(acc_scale, train, by = 'id')
+
+X_train <- train %>% subset(select = -c(label, id)) %>% as.matrix()
+X_test <- test %>% subset(select = -c(label, id))
+
+y_train <- train %>% select(label) %>% as.matrix()
+y_test <- test %>% select(label) %>% as.matrix()
+```
 
 ---
 
@@ -118,6 +134,17 @@ There are 1147 rows left.
 - Note: The labels for the training dataset should be passed separately.
 - It should be clear to you that the output of this function is a list of the predicted values for the test set you passed.
 
+```{r}
+my_k <- round(sqrt(nrow(X_train)))
+my_knn <- knn(train = X_train, test = X_test, cl = y_train, k = my_k)
+
+my_knn # these are my predicted values for the test df
+```
+```{r}
+my_knn %>% as.vector() %>% length()
+```
+
+
 
 6. Create a confusion matrix of the prediction results using CrossTable().
 - Set prop.chisq = FALSE.
@@ -125,7 +152,20 @@ There are 1147 rows left.
 https://www.rdocumentation.org/packages/gmodels/versions/2.18.1/topics/CrossTable
 
 
+```{r}
+my_crosstab <- CrossTable(x = y_test, y = my_knn, prop.chisq = FALSE)
+```
+```{r}
+my_crosstab
+```
+
+
 7. Calculate and print accuracy, sensitivity, error rate, and precision. You may choose either to use the information from the printed confusion matrix or to calculate using the equations from lecture slides. However, make sure you print and annotate them clearly for full credit.
+
+```{r}
+accuracy <- 3
+```
+
 
 ---
 
