--- a/20221109_Dial_Jackson_HW4.Rmd
+++ b/20221109_Dial_Jackson_HW4.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Homework 4"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 *In this homework, the objectives are to*
@@ -158,7 +160,8 @@ my_crosstab
 7. Calculate and print accuracy, sensitivity, error rate, and precision. You may choose either to use the information from the printed confusion matrix or to calculate using the equations from lecture slides. However, make sure you print and annotate them clearly for full credit.
 
 ```{r errorRate}
-errorRate <- mean(my_knn != y_test)
+errorRate_7 <- mean(my_knn != y_test)
+errorRate_7
 ```
 
 ```{r accuracy}
@@ -208,8 +211,7 @@ my_folds$Fold5 %>% length()
 ```{r kfknn}
 errorRates <- vector()
 for (i in 1:5){
-  fold_num <- paste("Fold", i)
-  fold <- my_folds$Fold1
+  fold <- my_folds[[i]] #need to make this fold_num somehow
   kf_test <- acc_scale %>% filter(id %in% fold)
   kf_train <- anti_join(acc_scale, kf_test, by = "id")
   
@@ -224,10 +226,11 @@ for (i in 1:5){
   
   errorRates[i] <- mean(my_kf_knn != kf_y_test)
 }
-mean(errorRates)
+mean_error_kf <- mean(errorRates)
+mean_error_kf
 ```
 
-The error rates are different, the averaged error rate is 0.41 and the error rate in question 7 is 0.35.
+The error rates are different, the averaged error rate is `r mean_error_kf` and the error rate in question 7 is `r errorRate_7`.
 
 __Check this__
 
@@ -243,9 +246,25 @@ library(MASS) # for LDA
 10. Train a linear discriminant analysis model on the training dataset using the lda() function. 
 - For more information, please refer to https://www.rdocumentation.org/packages/MASS/versions/7.3-53/topics/lda
 
+```{r LDA}
+my_lda <- lda(label ~ .,train %>% subset(select = -c(id)))
+```
+
 
 11. Evaluate LDA by plotting the ROC curve using prediction() and performance() from the ROCR package. Calculate and print the area under the ROC curve using performance().Interpret the results and compare it with the kNN results, which one has better performance in making predictions and why?
 
+```{r PredictionPerformance}
+pred = predict(my_lda,test,type="response")
+pred2 = prediction(pred$x, test$label)
+perf = performance(pred2, "acc")
+plot(perf)
+```
+
+```{r ROCCurve}
+roc = performance(pred2,"tpr","fpr")
+plot(roc, colorize = T, lwd = 2)
+# abline(a = 0, b = 1)
+```
 
 ---
 
@@ -253,17 +272,37 @@ library(MASS) # for LDA
 
 Load the dataset titled "life_expectancy_dataset.csv". Attached on the Sakai page for this homework is an excel document explaining what the variables mean in this dataset. Print the first 5 rows of the imported dataset and take an initial glance at the structure of this data using the str() function. Mutate the dataframe so that there is a new column titled *developed* where integer 1 means that the country of this row is developed and 0 otherwise. Save a dataframe object with all columns except for *Country*, *Year*, and *Status*.   (2 points)
 
+```{r lifeData}
+life <- read_csv("Data/life_expectancy_dataset.csv")
+head(life, 5)
+str(life)
+life2 <- life %>% 
+  mutate(developed = as.factor(case_when(
+    Status == "Developed" ~ 1,
+    TRUE ~ 0
+  ))) %>% 
+  subset(select = -c(Country, Year, Status))
+```
 
-12. Now use sample.split() from the "caTools" package to split the data into 80:20 = train:test sets (80% of the data will be used for training, and 20% will be used to test the model). Set the seed of the random number generator for the random assignment of each observation to either the train or test set  using set.seed(2022).  (3 points)
+
+
+12. Now use sample.split() from the "caTools" package to split the data into 80:20 = train:test sets (80% of the data will be used for training, and 20% will be used to test the model). Set the seed of the random number generator for the random assignment of each observation to either the train or test set using set.seed(2022).  (3 points)
+
+```{r life2}
+set.seed(2022)
+life2$my_splits <- sample.split(life2$developed, SplitRatio = 4/5)
+train_q2 <- life2 %>% filter(my_splits == TRUE)
+test_q2 <- life2 %>% filter(my_splits == FALSE)
+```
 
 
 We will use the glmnet() function from the glmnet package. Whereas all of the regression functions we have used so far, such as glm(), lm(), and regsubsets(), shared common syntax, glmnet() has a slightly different syntax. So to be able to use this function we will first pre-process our data. To do this, run the following lines of code to generate matrices of the testing and training datasets.
 
 ```{r eval=FALSE}
-x.train <- model.matrix(Life.expectancy ~., train.set)
-y.train <- train.set$Life.expectancy
-x.test <- model.matrix(Life.expectancy ~., test.set)
-y.test <- test.set$Life.expectancy
+x.train <- model.matrix(Life.expectancy ~., train_q2)
+y.train <- train_q2$Life.expectancy
+x.test <- model.matrix(Life.expectancy ~., test_q2)
+y.test <- test_q2$Life.expectancy
 ```
 
 ## Ridge Regression (14 points)
@@ -278,6 +317,11 @@ lambdas <- 10^seq(12, -6, length = 300)
 + For glmnet syntax information, refer to: https://www.rdocumentation.org/packages/glmnet/versions/3.0- 2/topics/glmnet
 + Note: You need to set alpha = 0 to indicate you want to run ridge regression.
 
+```{r ridge}
+ridge1 <- glmnet(x.train, y.train, alpha = 0, lambda = lambdas)
+ridge1
+```
+
 
 
 14. The glmnet package has a built-in cross validation function. Use cv.glmnet() to run cross-validated on ridge regression so that you can choose the optimal value of lambda. What is the $\lambda$ value that gives rise to the ridge regression model with the minimal mean squared error (MSE), which we will define to be the best model for our purposes?
@@ -287,14 +331,43 @@ lambdas <- 10^seq(12, -6, length = 300)
 2/topics/cv.glmnet
 + Add a plot of the result from calling cv.glmnet(). What does this plot tell you?
 
+```{r}
+set.seed(2022)
+ridge_cv <- cv.glmnet(x.train, y.train, alpha = 0)
+ridge_cv
+```
+
+
+```{r}
+ridge_cv$lambda.min
+plot(ridge_cv)
+```
+
+
+the lambda value that gives rise to the model with the minimum SE is `r ridge_cv$index[1]`
+
+This plot tells me that the lowest value for $log(\lambda)$ is approximately between [-.5,1.5].
 
 15. Use predict() from the glmnet package to test your model. Make sure you use the $\lambda$ derived from Question 15 and the test set. Calculate and print the mean squared error (MSE). 
 + For more information on the syntax, see
 https://www.rdocumentation.org/packages/glmnet/versions/1.1-1/topics/predict.glmnet
 
+```{r}
+glm_preds <- glmnet::predict.glmnet(ridge1, x.test, s = ridge_cv$lambda.min)
+my_mse <- mean((glm_preds - y.test)^2)
+my_mse
+```
 
+the MSE is `r my_mse`
 
 16. Calculate and print the sum of squared residuals (or RSS) and the R-squared statistic for the test set, using the predicted values from the best ridge regression model. 
+
+```{r}
+SSR <- sum((glm_preds - y.test)^2)
+SST <- sum((glm_preds - mean(y.test))^2)
+rsq <- SSR/SST
+rsq
+```
 
 
 ---
@@ -310,26 +383,49 @@ First, build a lasso model using glmnet() using training data and labels from qu
 + Note: You should use the same lambdas array as you used previously
 
 
+```{r}
+lasso1 <- glmnet(x.train, y.train, alpha = 1, lambda = lambdas)
+lasso1
+```
+
+
 18. Use cv.glmnet() to run cross validation on lasso and determine the lambda that minimizes the MSE (which we will consider here to mean the best performing model). What is the $\lambda$ value that gives rise to the best performing lasso model? 
 + Note: Make sure you set.seed(2022)
 + Hint: $lambda$.min outputs the value of $\lambda$ that gives the minimum mean cross-validated error (MSE).
 + For more information, see https://www.rdocumentation.org/packages/glmnet/versions/3.0-2/topics/cv.glmnet
 + Add a plot of the result from calling cv.glmnet(). What does this plot tell you?
 
+```{r}
+set.seed(2022)
+lasso_cv <- cv.glmnet(x.train, y.train, alpha = 1)
+lasso_cv
+```
+
 
 
 19. Use predict() from the glmnet package to test your model. Make sure you use the $\lambda$ derived from Question 17 and the test set. Calculate and print the test mean squared error (MSE). 
 + For more information on the syntax, see https://www.rdocumentation.org/packages/glmnet/versions/1.1-1/topics/predict.glmnet
 
+```{r}
+glm_preds2 <- glmnet::predict.glmnet(lasso1, x.test, s = lasso_cv$lambda.min)
+my_mse2 <- mean((glm_preds2 - y.test)^2)
+my_mse2
+```
 
 
 20. Calculate and print the sum of squared residuals (i.e. RSS) and the R-squared statistic for the test set, using the predicted values from the best lasso model.
 
+```{r}
+SSR2 <- sum((glm_preds2 - y.test)^2)
+SST2 <- sum((glm_preds2 - mean(y.test))^2)
+rsq2 <- SSR2/SST2
+rsq2
+```
 
 
 
 21. We have implemented and tested both Ridge and LASSO models to predict life expectancy. What are your conclusions? Which model worked better? Provide quantitative metrics to support your reasoning when applicable.
 
 
-
+Though the models have nearly identical evaluation metrics: Ridge $R^2 =$`r rsq` and $MSE =$ `r my_mse` while Lasso had values of: $R^2 =$ `r rsq2` and $MSE =$ `r my_mse2`, I would go with lasso, because lasso allows us to remove variables from the model thus simplifying the model.
 
